other/block-pod-exec-by-pod-and-container/.chainsaw-test/chainsaw-step-02-apply-3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-maintenance-02
  namespace: bpe-podcontainer-ns
spec:
  containers:
  - command:
    - sleep
    - "300"
    image: ghcr.io/kyverno/test-busybox:1.35
    name: busybox
