other/block-pod-exec-by-pod-and-container/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-exec-by-pod-and-container
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
